Fix header on mobile

--- a/web/themes/custom/frontend/css/style.css
+++ b/web/themes/custom/frontend/css/style.css
@@ -8223,6 +8223,11 @@ img {
   display: -ms-flexbox;
   display: flex;
 }
+@media (max-width: 767px) {
+  .block-dark-mode-switch label {
+    font-size: 0;
+  }
+}
 
 .block-lang-dropdown {
   margin-right: 30px;
@@ -8234,6 +8239,11 @@ img {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+}
+@media (max-width: 991px) {
+  .block-lang-dropdown {
+    margin-right: 15px;
+  }
 }
 .block-lang-dropdown select {
   width: 165px;
@@ -8311,8 +8321,29 @@ img {
   padding-bottom: 10px;
   padding-left: 230px;
 }
+@media (max-width: 1100px) {
+  .region-header-right {
+    padding-left: 80px;
+  }
+}
 .region-header-right input {
   margin-top: 0;
+}
+@media (max-width: 991px) {
+  .region-header-right {
+    padding-left: 0;
+    margin-left: auto;
+    -webkit-box-ordinal-group: 0;
+    -webkit-order: -1;
+        -ms-flex-order: -1;
+            order: -1;
+    width: 100%;
+    margin-bottom: 20px;
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
 }
 
 .iccwc-search-form {
@@ -8411,6 +8442,11 @@ header .menu .navbar-nav > .nav-item {
 header .menu .navbar-nav > .nav-item > .nav-item {
   padding: 8px 15px;
 }
+@media (max-width: 991px) {
+  header .menu .navbar-nav > .nav-item > .nav-item {
+    padding: 8px 0;
+  }
+}
 header .menu .navbar-nav .nav-item a, header .menu .navbar-nav .nav-item span {
   font-family: "Source Sans Pro", sans-serif;
   color: var(--color-black);
@@ -8454,6 +8490,16 @@ header .menu .navbar-nav .nav-item .dropdown-menu a:hover, header .menu .navbar-
   margin-bottom: 40px;
 }
 
+.navbar-toggler {
+  margin-left: auto;
+}
+
+@media (max-width: 991px) {
+  .navbar-nav {
+    text-align: left;
+    margin-top: 15px;
+  }
+}
 .block-iccwc-social-media a + a {
   margin-left: 10px;
 }
