--- a/web/themes/custom/frontend/src/scss/components/header.scss
+++ b/web/themes/custom/frontend/src/scss/components/header.scss
@@ -7,10 +7,21 @@
   .block-content {
     display: flex;
   }
+
+  label {
+    @media (max-width: 767px) {
+      font-size: 0;
+    }
+  }
 }
 
 .block-lang-dropdown {
   margin-right: 30px;
+
+  @media (max-width: 991px) {
+    margin-right: 15px;
+  }
+
   display: flex;
   align-items: center;
 
@@ -77,8 +88,21 @@
   padding-bottom: 10px;
   padding-left: 230px;
 
+  @media (max-width: 1100px) {
+    padding-left: 80px;
+  }
+
   input {
     margin-top: 0;
+  }
+
+  @media (max-width: 991px) {
+    padding-left: 0;
+    margin-left: auto;
+    order: -1;
+    width: 100%;
+    margin-bottom: 20px;
+    justify-content: flex-end;
   }
 }
 
@@ -156,6 +180,10 @@ header {
 
         > .nav-item {
           padding: 8px 15px;
+
+          @media (max-width: 991px) {
+            padding: 8px 0;
+          }
         }
       }
 
@@ -213,4 +241,15 @@ header {
   font-size: 20px;
   margin-top: -40px;
   margin-bottom: 40px;
+}
+
+.navbar-toggler {
+  margin-left: auto;
+}
+
+@media (max-width: 991px) {
+  .navbar-nav {
+    text-align: left;
+    margin-top: 15px;
+  }
 }
